fix: improved responsiveness and other fixes & workflow for ios
=> Menu button visibility on web with splitpane
=> Home: Update `ion-menu` button selection on browser navigation
=> improve responsive for onboarding and signin modal
=> Fixed Safari tab bar overlapping content of bottomTab and dark mode button on mobile
=> Workflow to build ios simulator app

--- a/ionic_ui_templates/src/app/templates/course-rive/navigation/side-menu/side-menu.component.scss
+++ b/ionic_ui_templates/src/app/templates/course-rive/navigation/side-menu/side-menu.component.scss
@@ -1,6 +1,6 @@
 .side-menu {
   width: 288px;
-  height: 100vh;
+  height: 100dvh; // having only 'vh' causes issues on Safari mobile
   padding-top: var(--safe-area-inset-top);
   padding-bottom: var(--ion-safe-area-bottom);
   background: var(--cr-color-background2);
