--- a/ionic_ui_templates/src/app/templates/course-rive/views/on-boarding/on-boarding.page.scss
+++ b/ionic_ui_templates/src/app/templates/course-rive/views/on-boarding/on-boarding.page.scss
@@ -23,11 +23,13 @@ div.content-container {
   position: absolute;
   top: 0;
   bottom: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 40px;
   padding-top: calc(var(--safe-area-inset-top) + 80px);
   padding-bottom: calc(var(--ion-safe-area-bottom) + 40px);
+  overflow-y: scroll;
 
   .title {
     max-width: 260px;
@@ -73,6 +75,7 @@ div.content-container {
     }
     .btnContent {
       color: black;
+      font-weight: 500;
       text-align: center;
       align-self: center;
       justify-content: center;
@@ -122,6 +125,7 @@ div.content-container {
 
 // Sign in Modal
 ion-modal {
+  --max-width: 600px;
   --border-radius: 20px;
   --background: transparent;
 
